# MatchMyCoffee

./: README.md
.github/workflows/: agent-ci.yml  backend-ci.yml  frontend-ci.yml
agent/: .dockerignore  .env.example  .gitignore  .pylintrc  Dockerfile  README.md  pyproject.toml  startup.sh
agent/src/: api.py  settings.py
agent/src/agent/: agent.py  exceptions.py  graph.py  llm_config.py  nodes.py  state.py  tools.py
agent/src/data/: backend.py  config.py  database.py
agent/src/utils/: ThinkBlockFilter.py
agent/static/: find_coffee_match_query.sql  system_prompt.txt  validator_system_prompt.txt
backend/: .dockerignore  .gitignore  Dockerfile  README.md  build.gradle  lint.gradle
backend/src/main/resources/: application-prod.properties  application.properties
database/: Dockerfile  README.md
database/scripts/: 01-schema.sql  02-seed.sql
frontend/: .env-template  .gitignore  .prettierignore  .prettierrc  README.md  eslint.config.mjs  index.html  package.json
frontend/.github/workflows/: workflow.yml
frontend/public/locales/en/: translation.json
frontend/src/: App.tsx  Root.tsx  i18n.js  index.css  main.tsx
frontend/src/components/: AddToCartButton.tsx  AddToFavoritesButton.tsx  NavigationBar.module.css  NavigationBar.tsx  StarRating.module.css  StarRating.tsx
frontend/src/components/cart/: CheckoutModal.tsx
frontend/src/components/common/: AddToCartButton.tsx  (+11 more)
frontend/src/context/: CartContext.tsx  FavoritesContext.tsx
frontend/src/hooks/: usePagination.ts  useProductActions.ts
frontend/src/pages/: BlogPostPage.module.css  BlogPostPage.tsx  BlogPostsPage.module.css  BlogPostsPage.tsx  CartCheckoutPage.module.css  CartCheckoutPage.tsx  CartPage.module.css  CartPage.tsx  FavoritesPage.tsx  HomePage.module.css  HomePage.tsx  ProductPage.module.css  ProductPage.tsx  RecommendationsPage.tsx
frontend/src/query/: common.query.ts  main.query.ts
frontend/src/services/: main.api.ts  sseRequestHandler.ts
frontend/src/types/: BlogPostType.ts  OrderType.ts  ProductsType.ts  ReviewType.ts
frontend/src/utils/: DummyProducts.ts  ThreadIDGenerator.ts
(+170 files in other folders)
