[project]
name = "agent"
version = "0.1.0"
description = "The agent module for MatchMyCoffee"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.124.4",
    "langchain-groq>=1.1.1",
    "langchain[google-genai]>=1.2.0",
    "langgraph>=1.0.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = ["pylint>=4.0.4"]
