[project]
name = "agent"
version = "0.1.0"
description = "The agent module for MatchMyCoffee"
readme = "README.md"
authors = [{ name = "Levente Daroczi" }, { name = "Beniamin Demeter" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.4",
    "langchain-groq>=1.1.1",
    "langchain[google-genai]>=1.2.0",
    "langgraph>=1.0.5",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = ["pylint>=4.0.4"]

[build-system]
requires = ["uv_build == 0.9.18"]
build-backend = "uv_build"

[project.urls]
"Repository" = "https://github.com/levilevente/MatchMyCoffee"
