[project]
name = "agent"
version = "0.1.0"
description = "The agent module for MatchMyCoffee"
readme = "README.md"
authors = [{ name = "Levente Daroczi" }, { name = "Beniamin Demeter" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.4",
    "langchain-groq>=1.1.1",
    "langchain[google-genai]>=1.2.0",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-postgres>=3.0.2",
    "psycopg-pool>=3.3.0",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "black>=25.12.0",
    "isort>=7.0.0",
    "pylint>=4.0.4",
    "ruff>=0.14.10",
]

[build-system]
requires = ["uv_build == 0.9.18"]
build-backend = "uv_build"

[project.urls]
"Repository" = "https://github.com/levilevente/MatchMyCoffee"

[tool.black]
line-length = 80
